# pd-simpl

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Makefile  README.md  index.html  mkdocs.yml  mqpeaks~-help.pd  s-peaks~-help.pd  simpl-help.pd  simpl.l_amd64  spt-help.pd
.github/workflows/: c-cpp.yml
Libraries/: sdif.cmake
Libraries/simpl/: CMakeLists.txt
Libraries/simpl/.cache/clangd/index/: base.cpp.96B254B1BA9E5955.idx  base.h.D9658521A78DE93F.idx  exceptions.h.9E14B38752EFBD25.idx  twm.cpp.F085D3ED72CC92DD.idx  twm.h.20BEE008A3112A3A.idx
Resources/: partialtrack~-help.pd
Resources/LibFiles/: partialtrack-help.pd
Resources/helps/: partialtrack-help.pd  s-peaks~-help.pd  simpl-help.pd
Sources/: Untitled-1.pd  create.cpp  get.cpp  get.cpp~  manipulations.cpp  manipulations.hpp  partialtrack.cpp  partialtrack.hpp  partialtrack~.cpp  pd-partialtrack.cpp  pd-partialtrack.hpp  pd-simpl.cpp  pd-simpl.hpp  peaks~.cpp  ptobj.cpp  s-create.cpp  s-get.cpp  s-loris-pt~.bak  s-partials.cpp  s-peaks~.cpp  s-sdif.cpp  s-spt.cpp  s-ss.cpp  s-synth~.cpp  s-trans.cpp  sdif.cpp  spt.hpp  spt~.cpp  ss~.cpp  synth~.cpp  trans.cpp
docs/: index.md  s-peaks.md
pd-obj/: get.cpp  mqpeaks.cpp  pd-simpl.hpp  pd_simpl.cpp  s-create.cpp  s-partials.cpp  s-peaks~.cpp
pd-partialtrack/: partialtrack-help.pd  spt-help.pd
s-peaks/: index.html
search/: search_index.json
